Se formate correctamente lo que devuelve los endpoints
